<resources>
    <string name="app_name">FiremanPro</string>
    <string name="ime_lbl">Vlasnik:</string>
    <string name="mjesto_lbl">Općina/grad:</string>
    <string name="adresa_lbl">Adresa:</string>
    <string name="telefon">Telefon:</string>
    <string name="mobitel">Mobitel:</string>
    <string name="title_activity_profil_new">ProfilNewActivity</string>
    <string name="action_settings"> Postavke </string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pretrazivanje">    Upiši ime, prezime ili adresu  </string>
    <string name="razmak">  </string>
    <string name="selo">Selo:</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Postavke</string>
    <string name="ok">Got it!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Osnovni podatci</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Naziv vatrogasne postrojbe</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Sinkronizacija podataka </string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Sinkroniziraj sada!!</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="lastSync">Posljednje uspješno sinkroniziranje</string>
    <string name="web_service_address">Adresa web servisa</string>
    <string name="emailToSend">Email na koji se šalje izvještaj</string>
    <string name="default_notification_channel_id">9999</string>
</resources>
