<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
   <!-- <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />-->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->

    <Preference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="lastSyncPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/lastSync"
        android:icon="@drawable/ic_info_black_24dp"
        />

    <Preference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="webServiceAddressPref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/web_service_address"
        android:icon="@drawable/ic_info_black_24dp"
        />


    <Preference android:title="@string/pref_title_system_sync_settings"
        android:key="syncKey"
        android:icon="@drawable/ic_sync_black_24dp"
            >
        <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->

    </Preference>

</PreferenceScreen>
