<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/tab1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageViewProfilHouse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                android:layout_margin="16dp" />
                // android:paddingRight="8dp"

        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- 2 columns -->
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewNameOwnerlbl"
                    android:text="@string/ime_lbl"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/text"
                    />

                <TextView
                    android:id="@+id/textViewNameOwner"
                    android:text="Mladen"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/textPodaci"
                    />
            </TableRow>

            <!-- just draw a red line
đ                            <View
            android:layout_height="2dip"
            android:background= "@color/colorMain"
                android:paddingLeft="10dp"
            />

            just draw a red line -->



            <!-- just draw a red line
đ                            <View
         android:layout_height="2dip"
         android:background= "@color/colorMain"
             android:paddingLeft="10dp"
         />

         just draw a red line -->

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewaddresslbl"
                    android:text="@string/adresa_lbl"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/text"
                    />
                <TextView
                    android:id="@+id/textView1Address"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/textPodaci"
                    android:layout_width="3dp"
                    android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                    />


            </TableRow>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <TextView
                    android:id="@+id/textViewPlacelbl"
                    android:text="@string/mjesto_lbl"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/text"
                    />

                <TextView
                    android:id="@+id/textViewPost"
                    android:text="Mladen"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/textPodaci"
                    />

            </TableRow>
            <!-- just draw a red line
đ                            <View
          android:layout_height="2dip"
          android:background= "@color/colorMain"
              android:paddingLeft="10dp"
          />

          just draw a red line -->

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewTellbl"
                    android:text="@string/telefon"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/text"
                    />

                <TextView
                    android:id="@+id/textViewTel"
                    android:text="Mladen"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/textPodaci"
                    />
            </TableRow>

            <!-- just draw a red line
đ                            <View
          android:layout_height="2dip"
          android:background= "@color/colorMain"
              android:paddingLeft="10dp"
          />

          just draw a red line -->

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewMobbl"
                    android:text="@string/mobitel"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/text"
                    android:layout_marginBottom="0dp"
                    />

                <TextView
                    android:id="@+id/textViewMobitel"
                    android:text="Mladen"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="@style/textPodaci"
                    android:layout_marginBottom="0dp"
                    />
            </TableRow>

            <!-- just draw a red line
đ                            <View
           android:layout_height="2dip"
           android:background= "@color/colorMain"
               android:paddingLeft="10dp"
           />

           just draw a red line -->

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
           >

            <ImageView
                android:id="@+id/imageViewTESTmap"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test_map"
                />
        </LinearLayout>




    </LinearLayout>
</ScrollView>
